<resources>
    <string name="calculator">CALCULATOR</string>
    <string name="Plus_Minus">±</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="Div">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Mul">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Sub">−</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Add">+</string>
    <string name="__0">0</string>
    <string name="Dot">.</string>
    <string name="app_name">CALCULATOR</string>
    <string name="Equal">Equal</string>
    <string name="_EQ">=</string>
</resources>
